Intitial team stack rendering WIP